Bug 1787072 - Avoid useless reframes setting the src attribute of a broken image that already has an image frame. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D155533